# IASS-FEM-DIFF

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
configs/: displacement_vertex_rgb.yaml  fem_displacement_map.yaml  fem_stress_map.yaml
data/: README.md
docs/: RHINO_ROADMAP.md
scripts/: diffusion_mesh_infer_server.py  generate-trig-surfaces.js  multi-agent-diffusion-mesh.html  multi-agent-diffusion-mesh.js  view-trig-surface.js
src/iass_fem_diff/: __init__.py  __main__.py  cli.py
src/iass_fem_diff/datasets/: __init__.py  fem_field_maps.py  mesh_displacement_rgb.py
src/iass_fem_diff/eval/: __init__.py  inference_eval.py
src/iass_fem_diff/infer/: __init__.py  trig_guided_sample.py  trig_sample.py
src/iass_fem_diff/io/: __init__.py  metadata.py
src/iass_fem_diff/physics/: __init__.py  fem_proxy.py  reference_fem_fields.py  reference_fem_solver.py
src/iass_fem_diff/train/: __init__.py  fem_fields.py  trig_diffusion.py  vertex_displacement.py
src/iass_fem_diff/viz/: __init__.py  colormaps.py  render_guided_run.py
