[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iass-fem-diff"
version = "0.1.0"
description = "Diffusion training scaffolding for shell displacement and FEM field images"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
train = [
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "numpy>=1.26.0",
  "PyYAML>=6.0.1",
  "Pillow>=10.0.0",
  "typer>=0.12.0",
  "rich>=13.0.0",
  "diffusers>=0.27.0",
  "accelerate>=0.28.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
iass-fem-diff = "iass_fem_diff.cli:main"
